dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb-container
        image: ssgaikwad/vprofiledb
        ports:
          - name: vprodb-port
            containerPort: 3306
        volumeMounts:
          - name: mysql-vol
            mountPath: /var/lib/mysql
      
      nodeselector:
        zone: us-east-2a

      init-contianer:
      - name: check-volume
        image: busybox
        args: ["rm","-rf","/var/lib/mysql/lost+found"] 
        volumeMounts: 
          - name: mysql-vol
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-vol
          awsElasticBlockStore:
            volumeID: vol-0c072011840d8ab48
            fsType: ext4
