memchached.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: vpromc01
spec:
  selector:
    matchLabels:
      app: vpromc01
  template:
    metadata:
      labels:
        app: vpromc01
    spec:
      containers:
        - name: vpromc01
          image: memcached
          ports:
            - name: vpromc01-port
              containerPort: 11211
