rmq.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: vprormq01
spec:
  selector:
    matchLabels:
      app: vprormq01
  template:
    metadata:
      labels:
        app: vprormq01
    spec:
      containers:
        - name: vprormq01
          image: rabbitmq
          ports:
            - name: rabbitmq-port
              containerPort: 15672
