mqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprocache01
spec:
  selector:
    app: vprocache01
  ports:
    - port: 11211
      targetPort: vpromc01-port
      protocol: TCP
  type: ClusterIP
