rmqservice.yaml
apiVersion: v1 
kind: Service
metadata:
  name: vprormq01
spec:
  selector:
    app: vprormq01
  ports:
    - port: 15672
      targetPort: rabbitmq-port
      protocol: TCP
  type: ClusterIP
